2015-02-24  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimization/65123
	* lra-remat.c (operand_to_remat): Check hard regs in insn
	definition too.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220946 138bc75d-0d04-0410-961f-82ee72b054a4